--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "material-ui": "next",
+    "material-ui": "1.0.0-beta.37",
     "material-ui-icons": "^1.0.0-beta.17",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-scripts-ts": "latest",
@@ -17,16 +17,16 @@
   },
   "devDependencies": {
     "@types/history": "^4.6.2",
-    "@types/jest": "*",
-    "@types/node": "*",
-    "@types/react": "*",
-    "@types/react-dom": "*",
+    "@types/jest": "22.1.0",
+    "@types/node": "9.4.0",
+    "@types/react": "16.0.35",
+    "@types/react-dom": "16.0.3",
     "@types/react-redux": "^5.0.14",
     "@types/react-router": "^4.0.18",
     "@types/redux-logger": "^3.0.5",
     "@types/webpack-env": "^1.13.5",
     "redux-devtools-extension": "^2.13.2",
-    "typescript": "latest"
+    "typescript": "2.7.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
