--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "material-ui": "1.0.0-beta.37",
+    "material-ui": "1.0.0-beta.38",
     "material-ui-icons": "^1.0.0-beta.17",
+    "npm": "^5.7.1",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-redux": "^5.0.6",
