--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "material-ui": "1.0.0-beta.40",
-    "material-ui-icons": "^1.0.0-beta.17",
+    "material-ui": "1.0.0-beta.44",
+    "material-ui-icons": "^1.0.0-beta.36",
     "npm": "^5.7.1",
     "react": "16.2.0",
-    "react-dom": "16.2.0",
-    "react-redux": "^5.0.6",
+    "react-dom": "16.3.2",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-scripts-ts": "latest",
     "redux": "^3.7.2",
@@ -20,14 +20,15 @@
     "@types/history": "^4.6.2",
     "@types/jest": "22.1.0",
     "@types/node": "9.4.0",
-    "@types/react": "16.0.35",
-    "@types/react-dom": "16.0.3",
-    "@types/react-redux": "^5.0.14",
+    "@types/react": "^16.3.2",
+    "@types/react-dom": "^16.0.5",
+    "@types/react-redux": "^5.0.19",
     "@types/react-router": "^4.0.18",
     "@types/redux-logger": "^3.0.5",
     "@types/webpack-env": "^1.13.5",
+    "csstype": "^2.4.2",
     "redux-devtools-extension": "^2.13.2",
-    "typescript": "2.7.1"
+    "typescript": "2.8.3"
   },
   "scripts": {
     "start": "react-scripts-ts start",
