--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "material-ui": "1.0.0-beta.44",
-    "material-ui-icons": "^1.0.0-beta.36",
+    "@material-ui/core": "^1.0.0-rc.0",
+    "@material-ui/icons": "^1.0.0-rc.0",
     "npm": "^5.7.1",
-    "react": "16.2.0",
+    "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
