--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "1.0.0",
+    "@material-ui/core": "1.2.0",
     "@material-ui/icons": "1.0.0",
     "npm": "^5.7.1",
-    "react": "16.3.2",
-    "react-dom": "16.3.2",
+    "react": "16.4.0",
+    "react-dom": "16.4.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-scripts-ts": "latest",
@@ -20,8 +20,8 @@
     "@types/history": "^4.6.2",
     "@types/jest": "22.1.0",
     "@types/node": "9.4.0",
-    "@types/react": "^16.3.2",
-    "@types/react-dom": "^16.0.5",
+    "@types/react": "16.3.16",
+    "@types/react-dom": "16.0.6",
     "@types/react-redux": "^5.0.19",
     "@types/react-router": "^4.0.18",
     "@types/redux-logger": "^3.0.5",
