--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "1.4.1",
-    "@material-ui/icons": "2.0.0",
-    "npm": "^5.7.1",
-    "react": "16.4.0",
-    "react-dom": "16.4.0",
+    "@material-ui/core": "3.1.1",
+    "@material-ui/icons": "3.0.1",
+    "react": "16.5.2",
+    "react-dom": "16.5.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-scripts-ts": "latest",
     "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
+    "redux-logger": "3.0.6",
     "redux-persist": "^5.5.0",
     "redux-thunk": "^2.2.0"
   },
@@ -20,15 +19,15 @@
     "@types/history": "^4.6.2",
     "@types/jest": "22.1.0",
     "@types/node": "9.4.0",
-    "@types/react": "16.3.16",
-    "@types/react-dom": "16.0.6",
+    "@types/react": "16.4.14",
+    "@types/react-dom": "16.0.7",
     "@types/react-redux": "^5.0.19",
     "@types/react-router": "^4.0.18",
     "@types/redux-logger": "^3.0.5",
     "@types/webpack-env": "^1.13.5",
     "csstype": "^2.4.2",
     "redux-devtools-extension": "^2.13.2",
-    "typescript": "2.8.3"
+    "typescript": "3.0.3"
   },
   "scripts": {
     "start": "react-scripts-ts start",
