--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "3.1.1",
+    "@material-ui/core": "3.3.0",
     "@material-ui/icons": "3.0.1",
     "react": "16.5.2",
     "react-dom": "16.5.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
-    "react-scripts-ts": "latest",
+    "react-scripts-ts": "3.1.0",
     "redux": "^3.7.2",
     "redux-logger": "3.0.6",
     "redux-persist": "^5.5.0",
@@ -27,7 +27,7 @@
     "@types/webpack-env": "^1.13.5",
     "csstype": "^2.4.2",
     "redux-devtools-extension": "^2.13.2",
-    "typescript": "3.0.3"
+    "typescript": "3.1.3"
   },
   "scripts": {
     "start": "react-scripts-ts start",
