--- a/package.json
+++ b/package.json
@@ -3,30 +3,30 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "3.3.1",
+    "@material-ui/core": "3.4.0",
     "@material-ui/icons": "3.0.1",
-    "react": "16.5.2",
-    "react-dom": "16.5.2",
-    "react-redux": "^5.0.7",
+    "react": "16.6.0",
+    "react-dom": "16.6.0",
+    "react-redux": "5.1.0",
     "react-router": "^4.2.0",
     "react-scripts-ts": "3.1.0",
-    "redux": "^3.7.2",
+    "redux": "4.0.1",
     "redux-logger": "3.0.6",
-    "redux-persist": "^5.5.0",
-    "redux-thunk": "^2.2.0"
+    "redux-persist": "5.10.0",
+    "redux-thunk": "2.3.0"
   },
   "devDependencies": {
     "@types/history": "^4.6.2",
     "@types/jest": "22.1.0",
     "@types/node": "9.4.0",
-    "@types/react": "16.4.14",
-    "@types/react-dom": "16.0.7",
+    "@types/react": "16.4.18",
+    "@types/react-dom": "16.0.9",
     "@types/react-redux": "^5.0.19",
     "@types/react-router": "^4.0.18",
     "@types/redux-logger": "^3.0.5",
     "@types/webpack-env": "^1.13.5",
-    "csstype": "^2.4.2",
-    "redux-devtools-extension": "^2.13.2",
+    "csstype": "2.5.7",
+    "redux-devtools-extension": "2.13.5",
     "typescript": "3.1.3"
   },
   "scripts": {
