--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "@material-ui/icons": "3.0.1",
     "react": "16.6.0",
     "react-dom": "16.6.0",
-    "react-redux": "5.1.0",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-scripts-ts": "3.1.0",
-    "redux": "4.0.1",
+    "redux": "^3.7.2",
     "redux-logger": "3.0.6",
-    "redux-persist": "5.10.0",
-    "redux-thunk": "2.3.0"
+    "redux-persist": "^5.5.0",
+    "redux-thunk": "2.2.0"
   },
   "devDependencies": {
     "@types/history": "^4.6.2",
@@ -25,8 +25,8 @@
     "@types/react-router": "^4.0.18",
     "@types/redux-logger": "^3.0.5",
     "@types/webpack-env": "^1.13.5",
-    "csstype": "2.5.7",
-    "redux-devtools-extension": "2.13.5",
+    "csstype": "^2.4.2",
+    "redux-devtools-extension": "^2.13.2",
     "typescript": "3.1.3"
   },
   "scripts": {
