--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@material-ui/core": "3.3.1",
     "@material-ui/icons": "3.0.1",
+    "connected-react-router": "4.5.0",
+    "localforage": "^1.7.3",
     "react": "16.5.2",
     "react-dom": "16.5.2",
     "react-redux": "^5.0.7",
