--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "dependencies": {
     "@material-ui/core": "3.7.0",
     "@material-ui/icons": "3.0.1",
-    "react": "16.6.0",
-    "react-dom": "16.6.0",
     "connected-react-router": "5.0.1",
     "localforage": "1.7.3",
+    "react": "16.6.0",
+    "react-dom": "16.6.0",
     "react-redux": "5.1.0",
     "react-router": "4.3.1",
-    "react-scripts-ts": "3.1.0",
+    "react-scripts-ts": "^4.0.8",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
     "redux-persist": "5.10.0",
@@ -36,5 +36,11 @@
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
