fix #7 from westside: add LibraryManagedAttributes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
-    "baseUrl": ".",
+    "skipLibCheck": true,
+    "baseUrl": "."
   },
   "exclude": [
     "node_modules",
