big version udate

--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "3.7.0",
-    "@material-ui/icons": "3.0.1",
-    "connected-react-router": "5.0.1",
+    "@material-ui/core": "3.9.2",
+    "@material-ui/icons": "3.0.2",
+    "connected-react-router": "6.2.2",
     "localforage": "1.7.3",
-    "react": "16.6.0",
-    "react-dom": "16.6.0",
-    "react-redux": "5.1.0",
+    "react": "16.8.1",
+    "react-dom": "16.8.1",
+    "react-redux": "6.0.0",
     "react-router": "4.3.1",
-    "react-scripts-ts": "^4.0.8",
+    "react-scripts-ts": "3.1.0",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
     "redux-persist": "5.10.0",
@@ -19,17 +19,17 @@
   },
   "devDependencies": {
     "@types/history": "4.7.2",
-    "@types/jest": "22.1.0",
-    "@types/node": "9.4.0",
-    "@types/react": "16.4.18",
-    "@types/react-dom": "16.0.9",
-    "@types/react-redux": "6.0.9",
-    "@types/react-router": "4.4.0",
+    "@types/jest": "24.0.0",
+    "@types/node": "10.12.23",
+    "@types/react": "16.8.2",
+    "@types/react-dom": "16.8.0",
+    "@types/react-redux": "7.0.1",
+    "@types/react-router": "4.4.3",
     "@types/redux-logger": "3.0.6",
-    "@types/webpack-env": "1.13.6",
-    "csstype": "^2.4.2",
-    "redux-devtools-extension": "2.13.5",
-    "typescript": "3.1.3"
+    "@types/webpack-env": "1.13.7",
+    "csstype": "2.6.2",
+    "redux-devtools-extension": "2.13.8",
+    "typescript": ""
   },
   "scripts": {
     "start": "react-scripts-ts start",
