--- a/package.json
+++ b/package.json
@@ -1,46 +1,43 @@
 {
-  "name": "create-react-app-material-typescript-redux",
-  "version": "0.0.1",
-  "private": true,
+  "name": "create-react-app-typescript-redux",
+  "version": "2.0.0",
   "dependencies": {
-    "@material-ui/core": "3.9.2",
-    "@material-ui/icons": "3.0.2",
-    "connected-react-router": "6.2.2",
-    "localforage": "1.7.3",
-    "react": "16.8.1",
-    "react-dom": "16.8.1",
-    "react-redux": "6.0.0",
-    "react-router": "4.3.1",
-    "react-scripts-ts": "3.1.0",
-    "redux": "4.0.1",
-    "redux-logger": "3.0.6",
-    "redux-persist": "5.10.0",
-    "redux-thunk": "2.3.0"
-  },
-  "devDependencies": {
-    "@types/history": "4.7.2",
-    "@types/jest": "24.0.0",
-    "@types/node": "10.12.23",
-    "@types/react": "16.8.2",
-    "@types/react-dom": "16.8.0",
-    "@types/react-redux": "7.0.1",
-    "@types/react-router": "4.4.3",
-    "@types/redux-logger": "3.0.6",
-    "@types/webpack-env": "1.13.7",
-    "csstype": "2.6.2",
-    "redux-devtools-extension": "2.13.8",
-    "typescript": ""
+    "localforage": "^1.7.3",
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5",
+    "react-redux": "^7.0.0-beta.0",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.3.0",
+    "typescript": "3.3.4000"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "eslint-plugin-react": "^7.12.4",
+    "@material-ui/core": "^4.0.0-alpha.5",
+    "@material-ui/icons": "^4.0.0-alpha.1",
+    "@material-ui/styles": "^4.0.0-alpha.5",
+    "@types/jest": "24.0.11",
+    "@types/node": "11.11.6",
+    "@types/react": "16.8.8",
+    "@types/react-dom": "16.8.3",
+    "@types/react-redux": "^7.0.5",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/redux-logger": "^3.0.7",
+    "@types/webpack-env": "^1.13.9"
+  }
 }
