--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "react-redux": "^7.0.0-beta.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
-    "typescript": "3.3.4000"
+    "typescript": "3.3.4000",
+    "@material-ui/core": "^4.0.0-alpha.5",
+    "@material-ui/icons": "^4.0.0-alpha.1",
+    "@material-ui/styles": "^4.0.0-alpha.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,15 +29,14 @@
   ],
   "devDependencies": {
     "eslint-plugin-react": "^7.12.4",
-    "@material-ui/core": "^4.0.0-alpha.5",
-    "@material-ui/icons": "^4.0.0-alpha.1",
-    "@material-ui/styles": "^4.0.0-alpha.5",
     "@types/jest": "24.0.11",
     "@types/node": "11.11.6",
     "@types/react": "16.8.8",
     "@types/react-dom": "16.8.3",
     "@types/react-redux": "^7.0.5",
     "@types/react-router-dom": "^4.3.1",
-    "@types/redux-logger": "^3.0.7"
+    "@types/redux-logger": "^3.0.7",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6"
   }
 }
