--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
 	"name": "create-react-app-typescript-redux",
 	"version": "2.0.0",
 	"dependencies": {
-		"@material-ui/core": "^4.0.0-beta.2",
-		"@material-ui/icons": "^4.0.0-beta.0",
-		"@material-ui/styles": "^4.0.0-beta.2",
+		"@material-ui/core": "4.0.1",
+		"@material-ui/icons": "4.0.1",
+		"@material-ui/styles": "4.0.1",
 		"localforage": "1.7.3",
 		"react": "16.8.6",
 		"react-dom": "16.8.6",
