--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
 		"localforage": "1.7.3",
 		"react": "16.8.6",
 		"react-dom": "16.8.6",
-		"react-redux": "7.0.3",
+		"react-redux": "7.1.0-rc.1",
 		"react-router-dom": "5.0.0",
 		"react-scripts": "3.0.0",
 		"redux-devtools-extension": "^2.13.8",
 		"redux-logger": "^3.0.6",
 		"redux-persist": "5.10.0",
 		"redux-thunk": "2.3.0",
-		"typescript": "3.4.4"
+		"typescript": "3.5.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -35,9 +35,9 @@
 		"@types/node": "^11.13.7",
 		"@types/react": "^16.8.14",
 		"@types/react-dom": "16.8.3",
-		"@types/react-redux": "^7.0.8",
 		"@types/react-router-dom": "^4.3.2",
 		"@types/redux-logger": "^3.0.7",
-		"@types/webpack-env": "^1.13.9"
+		"@types/webpack-env": "^1.13.9",
+		"@types/react-redux": "^7.0.9"
 	}
 }
