--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
 	"name": "create-react-app-typescript-redux",
 	"version": "2.0.0",
 	"dependencies": {
-		"@material-ui/core": "4.0.1",
-		"@material-ui/icons": "4.0.1",
-		"@material-ui/styles": "4.0.1",
+		"@material-ui/core": "4.1.1",
+		"@material-ui/icons": "4.2.0",
+		"@material-ui/styles": "4.1.1",
 		"localforage": "1.7.3",
 		"react": "16.8.6",
 		"react-dom": "16.8.6",
-		"react-redux": "7.1.0-rc.1",
+		"react-redux": "7.1.0",
 		"react-router-dom": "5.0.0",
 		"react-scripts": "3.0.0",
 		"redux-devtools-extension": "^2.13.8",
@@ -38,6 +38,6 @@
 		"@types/react-router-dom": "^4.3.2",
 		"@types/redux-logger": "^3.0.7",
 		"@types/webpack-env": "^1.13.9",
-		"@types/react-redux": "^7.0.9"
+		"@types/react-redux": "7.1.0"
 	}
 }
